more designs created

--- a/McLaughlinUniversity/DonorWindow.xaml
+++ b/McLaughlinUniversity/DonorWindow.xaml
@@ -7,7 +7,10 @@
         mc:Ignorable="d"
         Title="Donors" Height="450" Width="800">
     <Grid>
-        <ListView>
+
+        <Label x:Name="lblLogoHere" FontSize="18" Content="Logo goes here" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Button Content="Return to Dashboard" HorizontalAlignment="Left" Margin="676,7,0,0" VerticalAlignment="Top"/>
+        <ListView Margin="0,39,0,0">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Donor ID" Width="80" DisplayMemberBinding="{Binding DonorID}"/>
@@ -17,6 +20,7 @@
                     <GridViewColumn Header="Phone Number" Width="90" DisplayMemberBinding="{Binding PhoneNumber}"/>
                     <GridViewColumn Header="Corporation Name" Width="120" DisplayMemberBinding="{Binding CorporationName}"/>
                     <GridViewColumn Header="Foundation Name" Width="120" DisplayMemberBinding="{Binding FoundationName}"/>
+                    <GridViewColumn Header="Donor Type" Width="80" DisplayMemberBinding="{Binding DonorType}"/>
                 </GridView>
             </ListView.View>
         </ListView>
