--- a/McLaughlinUniversity/LoginWindow.xaml
+++ b/McLaughlinUniversity/LoginWindow.xaml
@@ -13,6 +13,7 @@
         <PasswordBox Name="txtPassword" PasswordChar="*" HorizontalAlignment="Left" Margin="167,169,0,0" VerticalAlignment="Top" Width="120" FontSize="16"/>
         <Button Name="btnSubmit" Content="Log In" HorizontalAlignment="Center" Margin="0,240,0,0" VerticalAlignment="Top" Background="#FF44F4F1" Width="174" FontSize="18"/>
         <Label Name="lblErrors" Content="User ID or Password is incorrect" Visibility="Hidden" HorizontalAlignment="Left" Margin="248,261,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblLogoHere" FontSize="18" Content="Logo goes here" HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
