--- a/McLaughlinUniversity/DashboardWindow.xaml
+++ b/McLaughlinUniversity/DashboardWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Label x:Name="lblLogoHere" FontSize="18" Content="Logo goes here" HorizontalAlignment="Left" Margin="153,10,0,0" VerticalAlignment="Top" Height="40" Width="138"/>
         <Button Content="View Donors" HorizontalAlignment="Left" Margin="153,64,0,0" VerticalAlignment="Top" Height="65" Width="138"/>
-        <Button Content="Add New Donor" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top" Height="65" Width="138"/>
+        <Button Content="Add New Donor" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top" Height="65" Width="138" Click="Button_Click"/>
         <Button Content="Add New Transaction" HorizontalAlignment="Left" Margin="10,134,0,0" VerticalAlignment="Top" Height="64" Width="138"/>
         <Button Content="Transaction History" HorizontalAlignment="Left" Margin="153,134,0,0" VerticalAlignment="Top" Height="64" Width="138"/>
         <Button Content="Search Transactions" HorizontalAlignment="Left" Margin="296,133,0,0" VerticalAlignment="Top" Height="65" Width="138"/>
