--- a/McLaughlinUniversity/User Controls/DonorContributionReport.xaml
+++ b/McLaughlinUniversity/User Controls/DonorContributionReport.xaml
@@ -7,6 +7,21 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <DataGrid Name="dgDonorContributionsReport"/>
+        <DataGrid Name="dgDonorContributionsReport" Margin="0,44,0,0"/>
+        <Label Name="lblYear" Content="Year:" HorizontalAlignment="Left" Margin="291,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.769,0.447"/>
+        <ComboBox Name="cmbYear" HorizontalAlignment="Left" Margin="331,12,0,0" VerticalAlignment="Top" Width="120">
+            <ComboBoxItem Content="2021"/>
+            <ComboBoxItem Content="2020"/>
+            <ComboBoxItem Content="2019"/>
+            <ComboBoxItem Content="2018"/>
+            <ComboBoxItem Content="2017"/>
+            <ComboBoxItem Content="2016"/>
+            <ComboBoxItem Content="2015"/>
+            <ComboBoxItem Content="2014"/>
+            <ComboBoxItem Content="2013"/>
+            <ComboBoxItem Content="2012"/>
+            <ComboBoxItem Content="2011"/>
+        </ComboBox>
+        <Button Name="btnSubmit" Content="Submit" HorizontalAlignment="Left" Margin="456,12,0,0" VerticalAlignment="Top" Click="btnSubmit_Click"/>
     </Grid>
 </UserControl>
